# chip8-emulation

./: .gitignore  README.md
chip8_cpp/: CMakeLists.txt  chip8.cpp  main.cpp  renderer.h
chip8_cpp/include/: chip8.h  cpu.h  memory.h  renderer.h  sound.h
chip8_cpp/src/: CMakeLists.txt  chip8.cpp  cpu.cpp  main.cpp  memory.cpp  renderer.cpp  sound.cpp
chip8_python/: chip8.py  clock.py  cpu.py  main.py  memory.py  renderer.py  sound.py
